--- a/TODO.txt
+++ b/TODO.txt
@@ -27,5 +27,11 @@ TODO
 =======
 	
 - MySQL (as well as corresponding config values)
-- Telportation (done needs to be implemented)
 - World Deletion/Generation
+
+What's been added
+==================
+
+- Permissions: DeityNether.GENERAL_PERMISSION (Deity.nether.general), DeityNether.OVERRIDE_PERMISSION (Deity.nether.override)
+- Inventory checking
+- Teleportation to nether
