--- a/TODO.txt
+++ b/TODO.txt
@@ -33,5 +33,5 @@ What's been added
 ==================
 
 - Permissions: DeityNether.GENERAL_PERMISSION (Deity.nether.general), DeityNether.OVERRIDE_PERMISSION (Deity.nether.override)
-- Inventory checking
-- Teleportation to nether
+- Inventory checking/removal og GOLD_BLOCKs as 'payment'
+- Teleportation to Nether/Overworld (main world)
