--- a/TODO.txt
+++ b/TODO.txt
@@ -26,12 +26,13 @@ that we can change later.
 TODO
 =======
 	
-- MySQL (as well as corresponding config values)
+- MySQL
 - World Deletion/Generation
 
 What's been added
 ==================
 
+- MySQL connection
 - Permissions: DeityNether.GENERAL_PERMISSION (Deity.nether.general), DeityNether.OVERRIDE_PERMISSION (Deity.nether.override)
 - Inventory checking/removal og GOLD_BLOCKs as 'payment'
 - Teleportation to Nether/Overworld (main world)
