--- a/TODO.txt
+++ b/TODO.txt
@@ -28,13 +28,16 @@ TODO
 	
 - MySQL:
   *Check server if nether needs to be reset
-  *Player values, such as how long they have been in the nether
+  *Player values:
+    *How long they need to wait to enter nether again (for OfflinePlayers, counter works with any online player)
 
 What's been added
 ==================
 
-- MySQL connection
-- WorldDeletion? (needs to be tested, deletion would also mean generation would be added)
+- MySQL:
+  *Player actions, such as leave and joining
+  *Counters, such as how long a player has been in the nether and how long they need to wait before joining again
+- WorldDeletion
 - Permissions: DeityNether.GENERAL_PERMISSION (Deity.nether.general), DeityNether.OVERRIDE_PERMISSION (Deity.nether.override)
 - Inventory checking/removal og GOLD_BLOCKs as 'payment'
 - Teleportation to Nether/Overworld (main world)
